Don't upsize table images, prevent overlapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,7 @@ a:hover {
 }
 
 .postcontent table img {
-  width: 100% !important;
-  margin-left: 0px;
+  max-width: 85% !important;
 }
 .postcontent iframe {
   width: calc(100% + 48px);
